--- a/index.html
+++ b/index.html
@@ -8,122 +8,157 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <img id="logo" src="./resources/images/ic-logo.svg" alt="colmar academy logo">
-        <ul>
+
+<!--  HEADER  --> 
+    <header>
+        <div class="logo__name">
+            <img id="logo" src="./resources/images/ic-logo.svg" alt="colmar academy logo">
+             <h1><strong>COLMAR</strong>ACADEMY</h1>
+        </div>    
+        <ul class="navbar">
             <a href=""><li>On campus</li></a>
             <a href=""><li>Online</li></a>
             <a href=""><li>Our Companies</li></a>
-            <button><li>Sign in</li></button>
+            <a href=""><button><li>Sign in</li></button></a>
         </ul>
-    </nav>
-    <div class="container intro">
-        <img src="./resources/images/banner.jpg" alt="students with books studying at an outdoor table">
-        <div class="intro__text">
-            <h2>Learn something new every day</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ea deserunt quam officiis mollitia dicta laboriosam earum veritatis sapiente dolores laborum, atque, ab inventore tempora aspernatur quasi ad, tempore laudantium.</p>
-            <button>Start here</button>
-        </div>
+    </header>
+
+<!--  FIRST SECTION - INTRO --> 
+    <div class="container" id="intro">
+        <div class="content">
+            <img class="main" src="./resources/images/banner.jpg" alt="students with books studying at an outdoor table">
+            <div class="side" > 
+                <div class="intro__text">
+                    <h1>Learn something new every day</h1>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h5>
+                    <button class="start">Start here</button>
+                 </div>
+            </div>
+        </div>    
     </div>
-    <div class="container orientation">
-        <div class="article__main">
-            <img src="./resources/images/information-main.jpg" alt="a man reading a book in a park">
-            <h2>It doesn't hurt to keep practicing</h2>
-            <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat optio, quis soluta inventore officiis quam quia aut et harum odio voluptatum eveniet quibusdam voluptates rerum quidem nostrum numquam iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic modi vitae, repellat molestias magni at perferendis, optio minus commodi ratione ullam corrupti explicabo, repudiandae temporibus voluptatibus eveniet odio ipsum est.</p>
-            <h6>Emanuel, Sr Strategist at Hiring.com</h6>
-        </div>
-        <div class="articles">
-            <div class="article">
-                <img src="./resources/images/information-orientation.jpg" alt="">
-                <h4>Orientation date</h4>
-                <p>Tue 10/11 & Wed 10/12: 8am - 3pm</p>
-                <a href="https://google.com"><p>Read more</p></a>
+
+<!--  SECOND SECTION - ARTICLES --> 
+    <div class="container" id="orientation">
+        <div class="content">
+            <div class="main">
+                <img src="./resources/images/information-main.jpg" alt="a man reading a book in a park">
+                <h2>It doesn't hurt to keep practicing</h2>
+                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat optio, quis soluta inventore officiis quam quia aut et harum odio voluptatum eveniet quibusdam voluptates rerum quidem nostrum numquam iure Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic modi vitae, repellat molestias magni at perferendis, optio minus commodi ratione ullam corrupti explicabo, repudiandae temporibus voluptatibus eveniet odio ipsum est."</p>
+                <h6>Emanuel, Sr Strategist at Hiring.com</h6>
             </div>
-            <div class="article">
-                <img src="./resources/images/information-campus.jpg" alt="">
-                <h4>Our campus</h4>
-                <p>Find which campus is close by you.</p>
-                <a href="https://google.com"><p>Read more</p></a>
+            <div class="side">
+                <div class="article">
+                    <img src="./resources/images/information-orientation.jpg" alt="">
+                    <div class="article--text">
+                        <h4>Orientation date</h4>
+                        <p>Tue 10/11 & Wed 10/12: 8am - 3pm</p>
+                        <a href="https://google.com"><p>Read more</p></a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="./resources/images/information-campus.jpg" alt="">
+                    <div class="article--text">    
+                        <h4>Our campus</h4>
+                        <p>Find which campus is close by you.</p>
+                        <a href="https://google.com"><p>Read more</p></a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="./resources/images/information-guest-lecture.jpg" alt="">
+                    <div class="article--text"> 
+                        <h4>Our guest lecture</h4>
+                        <p>Join a keynote with Olover Sack about music in medical treatment.</p>
+                        <a href="https://google.com"><p>Read more</p></a>
+                    </div>
+                </div>
             </div>
-            <div class="article">
-                <img src="./resources/images/information-guest-lecture.jpg" alt="">
-                <h4>Our guest lecture</h4>
-                <p>Join a keynote with Olover Sack about music in medical treatment.</p>
-                <a href="https://google.com"><p>Read more</p></a>
-            </div>
-        </div>
+        </div>   
     </div>
-    <div class="container learning">
-        <h1>Start learning</h1>
-        <div class="courses">
-            <div class="course">
-                <img src="./resources/images/course-software.jpg" alt="">
-                <h4>Software engineering</h4>
-                <p>COURSES</p>
-                <p>Web development, Mobile development, iOT, APIs</p>
+
+<!--  THIRD SECTION - COURSES  --> 
+    <div class="container" id="courses">
+        <h2>Start learning</h2>
+        <div class="content">
+            <div class="courses">
+                <div class="course">
+                    <img src="./resources/images/course-software.jpg" alt="">
+                    <h4>Software engineering</h4>
+                    <p>COURSES</p>
+                    <p>Web development, Mobile development, iOT, APIs</p>
+                </div>
+                <div class="course">
+                    <img src="./resources/images/course-computer-art.jpg" alt="">
+                    <h4>Computer art</h4>
+                    <p>COURSES</p>
+                    <p>Imaging and Design, Web desing, Motion Graphics & Visual effects, Computer animation</p>
+                </div>
+                <div class="course">
+                    <img src="./resources/images/course-design.jpg" alt="">
+                    <h4>Design</h4>
+                    <p>COURSES</p>
+                    <p>User Experience, Design, User Research, Visual Design</p>
+                </div>
+                <div class="course">
+                    <img src="./resources/images/course-data.jpg" alt="">
+                    <h4>Data</h4>
+                    <p>COURSES</p>
+                    <p>Data Science, Big data, SQL, Data Visualization</p>
+                </div>
+                <div class="course">
+                    <img src="./resources/images/course-business.jpg" alt="">
+                    <h4>Business</h4>
+                    <p>COURSES</p>
+                    <p>Product development, Business development, Startup</p>
+                </div>
+                <div class="course">
+                    <img src="./resources/images/course-marketing.jpg" alt="">
+                    <h4>Marketing</h4>
+                    <p>COURSES</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                </div>
             </div>
-            <div class="course">
-                <img src="./resources/images/course-computer-art.jpg" alt="">
-                <h4>Computer art</h4>
-                <p>COURSES</p>
-                <p>Imaging and Design, Web desing, Motion Graphics & Visual effects, Computer animation</p>
-            </div>
-            <div class="course">
-                <img src="./resources/images/course-design.jpg" alt="">
-                <h4>Design</h4>
-                <p>COURSES</p>
-                <p>User Experience, Design, User Research, Visual Design</p>
-            </div>
-            <div class="course">
-                <img src="./resources/images/course-data.jpg" alt="">
-                <h4>Data</h4>
-                <p>COURSES</p>
-                <p>Data Science, Big data, SQL, Data Visualization</p>
-            </div>
-            <div class="course">
-                <img src="./resources/images/course-business.jpg" alt="">
-                <h4>Business</h4>
-                <p>COURSES</p>
-                <p>Product development, Business development, Startup</p>
-            </div>
-            <div class="course">
-                <img src="./resources/images/course-marketing.jpg" alt="">
-                <h4>Marketing</h4>
-                <p>COURSES</p>
-                <p>Analytics, Content Marketing, Mobile Marketing</p>
-            </div>
-        </div>
+        </div>  
     </div>
-    <div class="thesis__exhibit">
-        <h1>Thesis Exhibit</h1>
-        <div class="article__main">
-            <video>
-                <source src="./resources/videos/thesis.mp4">
-            </video>
-            <h4>Reimagine urban</h4>
-            <p>Lorem, ipsum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis quas obcaecati voluptatibus. Ut vero amet inventore magni, voluptatem maxime temporibus, repellendus impedit culpa aspernatur consequatur, commodi libero. Facilis, esse ea! Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aperiam earum, atque quaerat consequuntur ipsam explicabo vel facere autem cumque.</p>
-        </div>
-        <div class="articles">
-            <div class="article">
-                <img src="./resources/images/thesis-fisma.jpg" alt="">
-                <h4>Fisma: Design and prototype</h4>
-                <p>Designeers showcase of new prototype product</p>
-                <a href="https://google.com"><p>Read more</p></a>
+
+<!--  FOURTH SECTION - THESIS  --> 
+    <div class="container" id="thesis">
+        <h2>Thesis Exhibit</h2>
+        <div class="content">
+            <div class="main">
+                <video>
+                    <source src="./resources/videos/thesis.mp4">
+                </video>
+                <h4>Reimagine urban</h4>
+                <p>Lorem, ipsum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis quas obcaecati voluptatibus. Ut vero amet inventore magni, voluptatem maxime temporibus, repellendus impedit culpa aspernatur consequatur, commodi libero. Facilis, esse ea! Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aperiam earum, atque quaerat consequuntur ipsam explicabo vel facere autem cumque.</p>
             </div>
-            <div class="article">
-                <img src="./resources/images/thesis-now-and-then.jpg" alt="">
-                <h4>Now and then</h4>
-                <p>Research study about New York</p>
-                <a href="https://google.com"><p>Read more</p></a>
+            <div class="side">
+                <div class="article">
+                    <img src="./resources/images/thesis-fisma.jpg" alt="">
+                    <div class="article--text">
+                        <h4>Fisma: Design and Prototype</h4>
+                        <p>Designer showcase of new prototype product</p>
+                        <a href="https://google.com"><p>Read more</p></a>
+                    </div>
+                </div>
+                <div class="article">
+                    <img src="./resources/images/thesis-now-and-then.jpg" alt="">
+                    <div class="article--text">  
+                        <h4>Now and then</h4>
+                        <p>Research study about New York</p>
+                        <a href="https://google.com"><p>Read more</p></a>
+                    </div> 
+                </div>
             </div>
-        </div>
+        </div>    
     </div> 
+
+<!--  FOOTER  --> 
     <footer>
         <p class="copyright"> C 2022 Colmar Academy, All rights reserved.</p>
-        <a href="">Terms</a>
-        <a href="">Privacy</a>
-    </footer>
-
-    
+        <ul class="links">
+            <a href="https://google.com" target="_blank"><li>Terms</li></a>
+            <a href="https://google.com" target="_blank"><li>Privacy</li></a>
+        </dul>
+    </footer>    
 </body>
 </html>
